--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>My wonderful website</title>
+        <title>My Fiserv Middleware Services website</title>
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <h1>Welcome to my wonderful website</h1>
+        <h1>Welcome to my wonderful Fiserv Sampe website</h1>
         <p>You will never find another place as cool as this</p>
         <p><img src="img/bridge.jpg" alt="A nice picture of The Bridge"/></p>
     </body>
